--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.box{
+	border:15px solid blue;
+	padding:50px;
+	width :300px;
+	margin: 20px;
+    background-color:lightblue;
+}
+.para{
+	background-color:lightblue;
+    width:300px;
+}
+
+
